docs/source/cli/2.12/nkp_create_package-bundle.md
---
title: nkp create package-bundle
sidebar_label: nkp create package-bundle
sidebar_position: 10
cli_generated: true
unlisted: true
hide_table_of_contents: true
displayed_sidebar: tutorialSidebar
nkp_minor: 2.12
nkp_patch: 2.12.2
nkp_command_id: nkp_create_package-bundle
nkp_command_kind: leaf
---

<div class="cli-doc-ref" aria-hidden="true"></div>

Create Operating System package bundle for one of [rhel-8.6, rhel-8.8, rocky-9.1, rocky-9.4, ubuntu-20.04, ubuntu-22.04]

### Options

<dl class="cli-opts">
<dt><code>--artifacts-directory</code> <span class="cli-opt__type">string</span></dt>
<dd>Path to a directory for storing OS package bundles. The directory must already exist.</dd>
<dt><code>--container-image</code> <span class="cli-opt__type">string</span></dt>
<dd>A container image to use for building the package bundles</dd>
<dt><code>--fips</code></dt>
<dd>Creats FIPS compliant packages</dd>
<dt><code>-h</code>, <code>--help</code></dt>
<dd>help for package-bundle</dd>
<dt><code>--kubernetes-version</code> <span class="cli-opt__type">string</span> <span class="cli-opt__default">default <code>1.29.9</code></span></dt>
<dd>kubernetes version used to build packages</dd>
<dt><code>-v</code>, <code>--verbose</code> <span class="cli-opt__type">int</span></dt>
<dd>Output verbosity</dd>
</dl>

### Usage

```bash
nkp create package-bundle OSName [flags]
```

### Parent command

* [nkp create](nkp_create.md) — Create one of \[appdeployment, bootstrap, capi-components, catalog, chart-bundle, cluster, image, image-bundle, nodepool, package-bundle, workspace\]
